Version 2.3.6, released April xxx, 2003
=======================================

- Eliminated WEB_BUFFER_SIZE, made memory allocation dynamically

Version 2.3.5, released April 9th, 2003
=======================================

- Added option "Summary page title"
- Translate "Date" correctly
- Changed "#" to "ID"
- Added "Remember me" button
- Added password recovery facility
- Made "Self register = 3" work with languages other than English

Version 2.3.4, released April 2nd, 2003
=======================================

- Added option "Quote on reply"
- Added option "Admin textarea"
- Fixed problem that replies with attachment upload erased original
  messages
- Fixed enless loop if user gets renamed in password file but browser
  keeps old cookie
- Only ownwer can delete entry if 'restrict edit = 1'
- Fixed error that logbook URL was wrong if messages are submitted via elog
- Added "Icon comment" option
- Added text search in all attributes
- Removed borders around icons in threaded display
- Added option 'Login user'
- Added notification about invalid user

Version 2.3.3, released March 14th, 2003
========================================

- Fixed bug which prevented elogd to bind to port 80 under Linux
- Resubmission of entries does not resubmit replies to those entries

Version 2.3.2, released March 12th, 2003
========================================

- Exchanged priviledge drop and directory creation (Recai Oktas)
- Added 'X-Mailer: Elog' and 'X-Elog-URL' in mail header
- Only re-read elogd.cfg if changed, using stat()
- 'Copy to' and 'Move to' now processes whole threads
- Ignore <tab>'s in config file correctly
- On 'restrict edit' check long_name only if short_name is not present
- Do not overwrite existing pidfile
- Changed path for cookies, special case for Lynx
- Added '-f <pidfile>' option
- Avoid cleartext password on URL if wrong username was supplied
- Fixed bug that attributes in replies were not found in searches if display in threaded mode