@@ -1170,6 +1170,13 @@ message body. The number of lines is controlled by the <b><code>Summary lines</b
 The default is <b>1</b>.
 <p>
 
+<li><b><code>Hide from selection = 0|1</code></b>
+</br>
+If this flag is <b>1</b>, the logbook is not displayed in the initial logbook selection
+page. This can be useful for "hidden" logbooks, which are only accessed for backup or
+archiving and would clutter up the logbook selection page. Default is <b>0</b>.
+<p>
+
 </ul><p>
 
 <a name="themes"><hr>
